--- a/config.toml
+++ b/config.toml
@@ -7,12 +7,14 @@ DisqusShortname= "TonyChen91"
 #publishDir = "public"
 
 [params]
-    mainbg = "https://picsum.photos/1920/1080" #是主頁面圖片
+    mainbg = "https://i.picsum.photos/id/287/1920/1080.jpg?hmac=ZhvfrQi8rTXr94jwP2QdDnbt6XA1bOb8YooouDMZHfE" #是主頁面圖片
     name = "MEKAKU'S SITE 陳的偉大嘗試"
     mainTitle = "夏時紀錄" #主標
     mainText = "Tony x Frank 說書小站" #副標
-    Version = "1.3.2"
-
+    Version = "1.3.3"
+#https://picsum.photos/1920/1080
+#https://i.picsum.photos/id/1040/1920/1080.jpg?hmac=cBk3ftMGNLK8W8U-vJpH_lroG5UMIZChcP6zRn1QaHg
+#https://i.picsum.photos/id/563/1920/1080.jpg?hmac=q-crUEfV34UnGAk6wr29t1tQ91W9D8pDgyXts7ZIW98
 [menus]
     [[menu.main]]
         identifier = "about"
