--- a/data/home/aboutFrank.toml
+++ b/data/home/aboutFrank.toml
@@ -26,4 +26,4 @@ text = """
     url = "https://www.facebook.com/profile.php?id=100006686837189"
 
 [[Picture]]
-    url = "https://scontent.ftpe7-2.fna.fbcdn.net/v/t1.6435-9/70020437_2732979433601591_5619876187540029440_n.jpg?_nc_cat=111&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=OKnPtu2e5FsAX8VvyHY&_nc_ht=scontent.ftpe7-2.fna&oh=f6d5f5e0ab3d3a35bd2802949de7d858&oe=60CF2EF2"
+    url = "https://scontent.ftpe7-2.fna.fbcdn.net/v/t1.6435-1/p320x320/70020437_2732979433601591_5619876187540029440_n.jpg?_nc_cat=111&ccb=1-3&_nc_sid=7206a8&_nc_ohc=TY6vYm0GWCEAX8ZKf09&_nc_ht=scontent.ftpe7-2.fna&oh=a19e18888af81fbe940a2ab3b9c34dba&oe=60F42FED"
