--- a/data/home/project.toml
+++ b/data/home/project.toml
@@ -8,21 +8,31 @@
         ▌無需事先準備。由兩位講者分享，其他參與者聆聽、自由討論
     """
 [[list]]
-    title = "大家來舉辦線上讀書會!!!"
+    title = "線上讀書會: 格雷的畫像、深井效應"
     myConnect = "404.html"
-    image = "https://techcrunch.com/wp-content/uploads/2019/02/GettyImages-865109088.jpg?w=730&crop=1"
+    image = "https://scontent.ftpe7-3.fna.fbcdn.net/v/t39.30808-6/c0.51.2048.1069a/s843x403/213583348_360262418814625_4616044828469855012_n.jpg?_nc_cat=102&ccb=1-3&_nc_sid=340051&_nc_ohc=IRUZWQG8FpoAX-j86Q6&_nc_ht=scontent.ftpe7-3.fna&oh=0a0f294b5b481511d3d57ad1d720517f&oe=60F45268"
     text = """
-        Tony和Frank相邀大家來參加線上讀書會!!!
-        時間還未定，預計以線上會議的方式參加。
-        詳細活動內容請見內文!!! 免費參加!!!
+        Reading Not Alone的成員相邀大家來參加線上讀書會!!!
+        時間為7/15 19:30，以線上會議Team的方式參加。
+        詳細活動內容請見內文!!! 無須準備!!!
     """
 [[list]]
-    title = " Minecraft TRPG 伺服器架設計畫"
+    title = " 單推百鬼綾目"
     myConnect = "404.html"
-    image = "https://cdn.hytale.com/variants/blog_cover_7c18e0c12c0588073edd90aa6ced6791_landscape_generation_header.png"
+    image = "https://i.ytimg.com/vi/z1W4c7ym49Y/hq720.jpg?sqp=-oaymwEcCNAFEJQDSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&amp;rs=AOn4CLCcuYDDJu3aL3rC1PXZsOk3rbfEow"
     text = """
-            Tony從以前就有一個夢想。
-            那就是在Minecraft架設類似TRPG的伺服器，
-            每個人可以自訂義技能的伺服器。
-            可惜Tony只會架Server/Plugin/Bukkit，不會Mod。
+        身為百鬼組的一員。
+        單然推百鬼綾目。
+        什麼?! 你不知道她是誰?
+        那你要點這個連結。
     """
+#[[list]]
+#    title = " Minecraft TRPG 伺服器架設計畫"
+#    myConnect = "404.html"
+#    image = "https://cdn.hytale.com/variants/blog_cover_7c18e0c12c0588073edd90aa6ced6791_landscape_generation_header.png"
+#    text = """
+#            Tony從以前就有一個夢想。
+#            那就是在Minecraft架設類似TRPG的伺服器，
+#            每個人可以自訂義技能的伺服器。
+#            可惜Tony只會架Server/Plugin/Bukkit，不會Mod。
+#    """
