--- a/data/home/project.toml
+++ b/data/home/project.toml
@@ -1,7 +1,7 @@
 [[list]]
     title = "讀書分享會 Reading Not Alone"
     myConnect = "https://www.facebook.com/ReadingNotAlone"
-    image = "https://scontent.ftpe7-4.fna.fbcdn.net/v/t1.6435-0/p600x600/120410660_204079591099576_9007819636990267952_n.png?_nc_cat=105&ccb=1-3&_nc_sid=e3f864&_nc_ohc=LeITzFFtVHsAX_iS7Du&_nc_ht=scontent.ftpe7-4.fna&oh=6c7e9f16bdd32b13e9a443bd99a64b77&oe=60F3D963"
+    image = "/img/RNA.png"
     text = """
         ▌六張犁站/麟光站附近咖啡廳
         ▌固定每月第二或第三個星期四晚間舉辦
@@ -10,7 +10,7 @@
 [[list]]
     title = "線上讀書會: 格雷的畫像、深井效應"
     myConnect = "404.html"
-    image = "https://scontent.ftpe7-3.fna.fbcdn.net/v/t39.30808-6/c0.51.2048.1069a/s843x403/213583348_360262418814625_4616044828469855012_n.jpg?_nc_cat=102&ccb=1-3&_nc_sid=340051&_nc_ohc=IRUZWQG8FpoAX-j86Q6&_nc_ht=scontent.ftpe7-3.fna&oh=0a0f294b5b481511d3d57ad1d720517f&oe=60F45268"
+    image = "/img/RNA2.jpg"
     text = """
         Reading Not Alone的成員相邀大家來參加線上讀書會!!!
         時間為7/15 19:30，以線上會議Team的方式參加。
