--- a/data/home/aboutTony.toml
+++ b/data/home/aboutTony.toml
@@ -1,11 +1,9 @@
 title = "小小網站架設計畫"
 
 text = """
-我是Tony，是一名小小的醫學生
-某天哪根筋不對，突然開始研究程式
-不知不覺完成了這個網站，自己也覺得很神奇
-於是和Frank相邀開始了寫文章的怪生活
-
+我是Tony，是一名小小的醫學生。某天哪根筋不對，
+突然開始研究程式，不知不覺完成了這個網站，
+自己也覺得很神奇。於是和Frank相邀開始了寫文章的怪生活
 """
 
 [[link]]
