--- a/data/home/aboutFrank.toml
+++ b/data/home/aboutFrank.toml
@@ -23,4 +23,4 @@ text = """
     url = "https://www.facebook.com/profile.php?id=100006686837189"
 
 [[Picture]]
-    url = "/img/FrankP.jpg"
+    url = "/img/FrankP2.jpg"
