--- a/data/home/aboutTony.toml
+++ b/data/home/aboutTony.toml
@@ -22,4 +22,4 @@ text = """
     icon = "fab fa-facebook"
     url = "https://www.facebook.com/profile.php?id=100007417927404"
 [[Picture]]
-    url = "/img/TonyP.jpg"
+    url = "/img/TonyP2.jpg"
