--- a/data/home/project.toml
+++ b/data/home/project.toml
@@ -1,6 +1,6 @@
 [[list]]
     title = "高醫密室逃脫手遊!製作中!"
-    myConnect = "#"
+    myConnect = "404.html"
     image = "/img/kmu-escape.jpg"
     text = """
         ▌預計2022年7月上架GooglePlay.AppleStore
